--- a/rosa.cabal
+++ b/rosa.cabal
@@ -16,17 +16,24 @@ extra-source-files:  CHANGELOG.md
 cabal-version:       >=1.10
 
 library
-  -- exposed-modules:
-  -- other-modules:
+  exposed-modules:     Rosa.Compiler
+  other-modules:       Rosa.AST
+                       Rosa.CodeGen
+                       Rosa.Lexer
+                       Rosa.Parser
   -- other-extensions:
-  build-depends:       base >=4.12 && <4.13
-  -- hs-source-dirs:
+  build-depends:       array >=0.5 && <0.6,
+                       base >=4.12 && <4.13
+  build-tools:         alex >=3.2 && <3.3,
+                       happy >=1.19 && <1.20
+  hs-source-dirs:      src
   default-language:    Haskell2010
 
 executable rosa
   main-is:             Main.hs
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.12 && <4.13
-  -- hs-source-dirs:
+  build-depends:       base >=4.12 && <4.13,
+                       rosa
+  hs-source-dirs:      exe
   default-language:    Haskell2010
