--- a/rosa.cabal
+++ b/rosa.cabal
@@ -35,6 +35,8 @@ executable rosa
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.12 && <4.13,
+                       optparse-applicative >=0.14 && <0.15,
+                       process >=1.6 && <1.7,
                        rosa
   hs-source-dirs:      exe
   default-language:    Haskell2010
