--- a/rosa.cabal
+++ b/rosa.cabal
@@ -17,10 +17,13 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     Rosa.Compiler
-  other-modules:       Rosa.AST
-                       Rosa.Codegen
-                       Rosa.Lexer
+                       --
+                       Rosa.AST
                        Rosa.Parser
+                       Rosa.PrettyPrinter
+                       --
+  other-modules:       Rosa.Codegen
+                       Rosa.Lexer
   -- other-extensions:
   build-depends:       array >=0.5 && <0.6,
                        base >=4.12 && <4.13,
@@ -40,4 +43,16 @@ executable rosa
                        process >=1.6 && <1.7,
                        rosa
   hs-source-dirs:      exe
+  default-language:    Haskell2010
+
+test-suite spec
+  type:                exitcode-stdio-1.0
+  main-is:             Spec.hs
+  other-modules:       Rosa.ParserSpec
+                       Rosa.Parser.Gen
+  build-depends:       base >=4.12 && <4.13,
+                       hspec >=2.7 && <2.8,
+                       rosa,
+                       QuickCheck >=2.13 && <2.14
+  hs-source-dirs:      test
   default-language:    Haskell2010
