--- a/rosa.cabal
+++ b/rosa.cabal
@@ -3,7 +3,7 @@ name:                   rosa
 version:                0.1.0.0
 -- synopsis:
 -- description:
-license:                BSD-3-Clause
+license:                MIT
 license-file:           LICENSE
 author:                 Jonáš Malena
 maintainer:             jonas.malena@gmail.com
@@ -20,16 +20,12 @@ library
     exposed-modules:    Rosa.Frontend.AST
                         Rosa.Frontend.Lexer
                         Rosa.Frontend.Parser
-                        Rosa.Frontend.PrettyPrinter
-                        Rosa.Compiler
-    other-modules:      Rosa.Codegen.Frame
-                        Rosa.Codegen
+    -- other-modules:
     -- other-extensions:
     build-depends:      array >=0.5 && <0.6,
                         base >=4.9 && <5,
                         containers >=0.6 && <0.7,
                         mtl >=2.3 && <2.4,
-                        smallcheck >=1.2 && <1.3
     build-tool-depends: alex:alex >=3.5 && <3.6,
                         happy:happy >=2.0 && <2.1
     hs-source-dirs:     src
@@ -50,9 +46,7 @@ executable rosa
 test-suite rosa-test
     import:             warnings
     default-language:   Haskell2010
-    other-modules:      Rosa.Frontend.ParserAndPrettyPrinterTest,
-                        Rosa.Frontend.ParserAcceptanceTest,
-                        Rosa.Frontend.LiteralParserTest
+    other-modules:      Rosa.Frontend.ParserAcceptanceTest
     -- other-extensions:
     type:               exitcode-stdio-1.0
     hs-source-dirs:     test
@@ -60,7 +54,6 @@ test-suite rosa-test
     build-depends:      base >=4.9 && <5,
                         tasty >=1.5 && <1.6,
                         tasty-hunit >=0.10 && <0.11,
-                        tasty-smallcheck >=0.8 && <0.9,
                         string-qq >=0.0 && <0.1,
                         rosa
     build-tool-depends: tasty-discover:tasty-discover >=5.1 && <5.2
