--- a/rosa.cabal
+++ b/rosa.cabal
@@ -17,9 +17,9 @@ common warnings
 
 library
     import:             warnings
-    exposed-modules:    Rosa.Frontend.AST
-                        Rosa.Frontend.Lexer
-                        Rosa.Frontend.Parser
+    exposed-modules:    Language.Rosa.Frontend.AST
+                        Language.Rosa.Frontend.Lexer
+                        Language.Rosa.Frontend.Parser
     -- other-modules:
     -- other-extensions:
     build-depends:      array >=0.5 && <0.6,
@@ -46,7 +46,7 @@ executable rosa
 test-suite rosa-test
     import:             warnings
     default-language:   Haskell2010
-    other-modules:      Rosa.Frontend.ParserAcceptanceTest
+    other-modules:      Language.Rosa.Frontend.ParserAcceptanceTest
     -- other-extensions:
     type:               exitcode-stdio-1.0
     hs-source-dirs:     test
