--- a/rosa.cabal
+++ b/rosa.cabal
@@ -17,16 +17,24 @@ common warnings
 
 library
     import:             warnings
-    exposed-modules:    Language.Rosa.Syntax.AST
-    other-modules:      Language.Rosa.Syntax.Operators
-                        Language.Rosa.Syntax.Stages
+    exposed-modules:    Language.Rosa.Parser
+    other-modules:      Language.Rosa.Ast.Definitions.VarDefinition
+                        Language.Rosa.Ast.Definitions
+                        Language.Rosa.Ast.Expr
+                        Language.Rosa.Ast.Operator
+                        Language.Rosa.Ast.Span
+                        Language.Rosa.Ast.Value
+                        Language.Rosa.Ast
+                        Language.Rosa.Error
                         Language.Rosa.Parser.Lexer
+                        Language.Rosa.Parser.Monad
                         Language.Rosa.Parser.Parser
+                        Language.Rosa.Parser.Token
     -- other-extensions:
     build-depends:      array >=0.5 && <0.6,
                         base >=4.9 && <5,
-                        containers >=0.6 && <0.7,
-                        mtl >=2.3 && <2.4,
+                        bytestring >=0.12 && <0.13,
+                        filepath >=1.5 && <1.6
     build-tool-depends: alex:alex >=3.5 && <3.6,
                         happy:happy >=2.0 && <2.1
     hs-source-dirs:     src
@@ -47,7 +55,7 @@ executable rosa
 test-suite rosa-test
     import:             warnings
     default-language:   Haskell2010
-    other-modules:      Language.Rosa.Frontend.ParserAcceptanceTest
+    other-modules:      Language.Rosa.ParserTest
     -- other-extensions:
     type:               exitcode-stdio-1.0
     hs-source-dirs:     test
@@ -55,6 +63,5 @@ test-suite rosa-test
     build-depends:      base >=4.9 && <5,
                         tasty >=1.5 && <1.6,
                         tasty-hunit >=0.10 && <0.11,
-                        string-qq >=0.0 && <0.1,
                         rosa
     build-tool-depends: tasty-discover:tasty-discover >=5.1 && <5.2
