--- a/rosa.cabal
+++ b/rosa.cabal
@@ -62,11 +62,16 @@ test-suite rosa-test
     import:             warnings
     default-language:   Haskell2010
     other-modules:      Language.Rosa.Parser.LexerSpec
+                        Language.Rosa.Parser.ParserAstGolden
     -- other-extensions:
     type:               exitcode-stdio-1.0
     hs-source-dirs:     test
-    main-is:            Spec.hs
+    main-is:            Driver.hs
     build-depends:      base >=4.9 && <5,
                         bytestring >=0.12 && <0.13,
-                        hspec >=2.11 && <2.12,
+                        filepath >=1.5 && <1.6,
+                        tasty >=1.5 && <1.6,
+                        tasty-discover >=5.1 && <5.2,
+                        tasty-golden >=2.3 && <2.4,
+                        tasty-hunit >=0.10 && <0.11,
                         rosa
