--- a/rosa.cabal
+++ b/rosa.cabal
@@ -31,7 +31,7 @@ library
                         Language.Rosa.Ast.Statement
                         Language.Rosa.Ast.Value
                         -- Language.Rosa.Compiler.Monad
-                        -- Language.Rosa.Parser.Errors
+                        Language.Rosa.Parser.Errors
                         Language.Rosa.Parser.Lexer
                         Language.Rosa.Parser.Monad
                         Language.Rosa.Parser.Parser
