--- a/rosa.cabal
+++ b/rosa.cabal
@@ -63,7 +63,7 @@ test-suite rosa-test
     import:             warnings
     default-language:   Haskell2010
     other-modules:      Language.Rosa.Parser.LexerSpec
-                        Language.Rosa.Parser.ParserAstGolden
+                        Language.Rosa.Parser.ParserSpec
     -- other-extensions:
     type:               exitcode-stdio-1.0
     hs-source-dirs:     test
